force-app/main/default/objects/Project__c/fields/Last_Task_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Task_Completed_Date__c</fullName>
    <label>Last Task Completed Date</label>
    <type>DateTime</type>
</CustomField>