force-app/main/default/objects/Project__c/fields/No_of_Tasks_assigned__c.field-meta.xml
<CustomField>
    <fullName>No_of_Tasks_assigned__c</fullName>
    <label>No of Tasks assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>