force-app/main/default/objects/Project__c/fields/Project_Duration_in_Years__c.field-meta.xml
<CustomField>
    <fullName>Project_Duration_in_Years__c</fullName>
    <label>Project Duration in Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>